fix: 删除冗余 defineName code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "emitDeclarationOnly": true,
     "moduleResolution": "node"
   },
-  "include": ["src/**/*", "test/**/*"]
+  "types": ["vite/client"],
+  "include": ["src/**/*", "test/**/*", "typings/**/*.d.ts"]
 }
