--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "@vitejs/plugin-vue": "^2.3.1",
     "@vue/compiler-sfc": "^3.2.31",
     "typescript": "^4.6.3",
-    "vite-plugin-dts": "^1.0.5"
+    "vite-plugin-dts": "^1.0.5",
+    "vue": "^3.2.31"
   },
   "name": "vite-plugin-vue-definename",
   "version": "1.0.0",
@@ -27,7 +29,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "vite build"
+    "build": "vite build",
+    "dev": "vite"
   },
   "author": "",
   "license": "ISC",
