--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@types/node": "^17.0.23",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/compiler-sfc": "^3.2.31",
+    "cross-env": "^7.0.3",
     "typescript": "^4.6.3",
     "vite-plugin-dts": "^1.0.5",
     "vue": "^3.2.31"
   },
   "name": "vite-plugin-vue-definename",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "files": [
     "dist"
   ],
@@ -29,8 +30,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "vite build",
-    "dev": "vite"
+    "build": "cross-env NODE_ENV=production vite build",
+    "dev": "vite",
+    "publish": "pnpm run build && npm publish"
   },
   "keywords": [
     "defineName",
