--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "vue": "^3.2.31"
   },
   "name": "vite-plugin-vue-definename",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "files": [
     "dist"
   ],
-  "main": "./dist/vite-plugin-vue-definename.es.js",
-  "module": "./dist/vite-plugin-vue-definename.es.js",
+  "main": "dist/vite-plugin-vue-definename.es.js",
+  "module": "dist/vite-plugin-vue-definename.es.js",
   "exports": {
     ".": {
       "import": "./dist/vite-plugin-vue-definename.es.js",
       "require": "./dist/vite-plugin-vue-definename.es.js"
     }
   },
-  "types": "dist/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "directories": {
     "test": "tests"
   },
