--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vue": "^3.2.31"
   },
   "name": "vite-plugin-vue-definename",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "files": [
     "dist"
   ],
@@ -32,7 +32,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cross-env NODE_ENV=production vite build",
     "dev": "vite",
-    "publish": "pnpm run build && npm publish"
+    "pub": "pnpm run build && npm publish"
   },
   "keywords": [
     "defineName",
